fix: [CDS-46388]: services grid view overflowing (#12510)

--- a/src/modules/75-cd/components/Services/ServicesGridView/ServicesGridView.module.scss
+++ b/src/modules/75-cd/components/Services/ServicesGridView/ServicesGridView.module.scss
@@ -7,7 +7,7 @@
 
 .masonry {
   min-height: calc(100vh - var(--page-header-height) - 64px);
-  width: 1200px;
+  width: min(100%, 1200px) !important;
   margin: 0 auto !important;
   display: grid;
   justify-content: center;
